# bevy_shader_graph

./: .gitignore  Cargo.toml  README.md  fake_interior.json  interior_mapping.json  test_shader.json
assets/shaders/: shader_graph.wgsl
examples/: editor.rs
src/: editor.rs  extended_material.rs  lib.rs  material.rs
src/nodes/: math.rs  mod.rs  shader.rs
