[package]
name = "bevy_shader_graph"
version = "0.0.1"
edition = "2021"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
license = "MIT/Apache-2.0"
description = "Shader graph for Bevy."
keywords = ["Shadergraph", "node", "graph"]
repository = "https://github.com/Neopallium/bevy_shader_graph"
homepage = "https://github.com/Neopallium/bevy_shader_graph"

exclude = [
	"examples/*",
	"assets/textures/*",
]

[features]
default = ["egui"]

egui = ["dep:egui", "egui_extras"]

[dependencies]
node_engine = { version = "0.1", path = "../node_engine/" }
anyhow = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }

glam = { version = "0.24", features = ["serde"] }

bevy = { version = "0.12.1", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_pbr"] }
bevy_egui = { version = "0.24" }
egui = { version = "0.24", optional = true }
egui_extras = { version = "0.24", optional = true }

[dev-dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking", "file_watcher", "asset_processor", "basis-universal", "jpeg", "tga", "exr", "zlib", "zstd", "ktx2"] }

bevy-inspector-egui = { version = "0.22" }
bevy_panorbit_camera = { version = "0.10", features = ["bevy_egui"] }
bevy_spectator = "0.4.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
