[package]
name = "bevy_shader_graph"
version = "0.2.0"
edition = "2021"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
license = "MIT/Apache-2.0"
description = "Shader graph for Bevy."
keywords = ["Shadergraph", "node", "graph"]
repository = "https://github.com/Neopallium/bevy_shader_graph"
homepage = "https://github.com/Neopallium/bevy_shader_graph"

exclude = [
	"examples/*",
	"assets/textures/*",
]

[features]
default = ["egui"]

egui = ["dep:egui", "egui_extras"]

[dependencies]
#node_engine = { version = "0.5", path = "../node_engine/" }
node_engine = { version = "0.5" }
anyhow = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }

glam = { version = "0.29", features = ["serde"] }

bevy = { version = "0.15", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_pbr"] }
bevy_egui = { version = "0.31" }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", optional = true }

[dev-dependencies]
bevy = { version = "0.15", features = ["file_watcher", "asset_processor", "basis-universal", "jpeg", "tga", "exr", "zlib", "zstd", "ktx2"] }

bevy-inspector-egui = { version = "0.28" }
bevy_panorbit_camera = { version = "0.21", features = ["bevy_egui"] }
bevy_spectator = "0.7.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
